--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,58 +1,129 @@
 <!-- Describe task in general -->
 
-<p>This is the second task on parsing YAML. It represents the next step where parsing gets more complicated. The data types, such as null and bool, are being added, and besides that, you’re getting the ability to use quotes in strings.</p>
+<p>The 4th task in the series of missions about the YAML format will be devoted to a complex structure.</p>
 
-<p>Here are some of the examples:</p>
+<p>An array element can be another array.</p>
 
 <pre>
-name: "Bob Dylan"
-children: 6
+- Alex
+-
+  - odessa
+  - dnipro
+- Li
+</pre>
+
+<pre>
+[
+  "Alex", 
+  [
+    "odessa", 
+    "dnipro"
+  ], 
+  "Li"
+]
+</pre>
+
+<p>A dictionary can also be an element of an array.</p>
+
+<pre>
+- 67
+-
+  name: Irv
+  game: Mario
+-
+- 56
+
+</pre>
+
+<pre>
+[
+  67, 
+  {
+    "game": "Mario", 
+    "name": "Irv"
+  }, 
+  null, 
+  56
+]
+</pre>
+
+<p>A dictionary element can be another dictionary.</p>
+
+<pre>
+name: Alex
+study:
+  type: school
+  number: 78
+age: 14
 </pre>
 
 <pre>
 {
-  "name": "Bob Dylan", 
-  "children": 6
+  "age": 14, 
+  "study": {
+    "type": "school", 
+    "number": 78
+  }, 
+  "name": "Alex"
 }
 </pre>
 
-<p>As you can see, the string can be put in quotes. It can be both double and single quotes.</p>
+<p>An array can also be an element of a dictionary.</p>
 
 <pre>
-name: "Bob Dylan"
-children: 6
-alive: false
+name: Alex
+study:
+  - 89
+  - 89
+  - "Hell"
+age: 14
 </pre>
 
 <pre>
 {
-  "name": "Bob Dylan", 
-  "alive": {% if interpreter.slug == "js-node" %}false{% else %}False{%endif%}, 
-  "children": 6
+  "age": 14, 
+  "study": [
+    89, 
+    89, 
+    "Hell"
+  ], 
+  "name": "Alex"
 }
 </pre>
 
-<p>true and false are the keywords defining the boolean type.</p>
+<p>And, of course, data can have more than one nesting level.</p>
 
 <pre>
-name: "Bob Dylan"
-children: 6
-coding:
+name: Alex
+study:
+  -
+    type: school
+    num: 89
+  -
+    type: school
+    num: 12
+age: 14
 </pre>
-
 <pre>
 {
-  "coding": {% if interpreter.slug == "js-node" %}null{% else %}None{%endif%}, 
-  "name": "Bob Dylan", 
-  "children": 6
+  "age": 14, 
+  "study": [
+    {
+      "num": 89, 
+      "type": "school"
+    }, 
+    {
+      "num": 12, 
+      "type": "school"
+    }
+  ], 
+  "name": "Alex"
 }
 </pre>
-
-<p>If no value is specified, it becomes undefined. There also is a keyword for this - null.</p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input: </strong> A format string.
+    <strong>Input: </strong> Format string. 
 </p>
 
 <p>
@@ -102,5 +173,5 @@ yaml('# comment
 <!-- The section is optional -->
 <p>
     <strong>Precondition:</strong>
-    <i>YAML 1.2 is being used with <a href="https://yaml.org/spec/1.2/spec.html#id2803231">JSON Schema</a>.</i>
+    <i>The YAML 1.2 standard is being used.</i>
 </p>
