--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -1,6 +1,6 @@
 <!-- Describe task in general -->
 
-<p>4ая задача в серии миссий о формате YAML будет посвещена сложной струкруте.</p>
+<p>4ая задача в серии миссий о формате YAML будет посвящена сложной структуре.</p>
 
 <p>Элементом массива может быть другой массив.</p>
 
@@ -23,7 +23,7 @@
 ]
 </pre>
 
-<p>Элементом массива может быть словарь</p>
+<p>Элементом массива может быть словарь.</p>
 
 <pre>
 - 67
@@ -47,7 +47,7 @@
 ]
 </pre>
 
-<p>Элементом словаря может быть другой словарь</p>
+<p>Элементом словаря может быть другой словарь.</p>
 
 <pre>
 name: Alex
@@ -68,7 +68,7 @@ age: 14
 }
 </pre>
 
-<p>Элементом словаря может быть массив</p>
+<p>Элементом словаря может быть массив.</p>
 
 <pre>
 name: Alex
@@ -91,7 +91,7 @@ age: 14
 }
 </pre>
 
-<p>Ну и конечно же данные могут иметь более одного уровня вложености</p>
+<p>Ну и конечно же данные могут иметь более одного уровня вложенности.</p>
 
 <pre>
 name: Alex
